--- a/config/locales/fr.json
+++ b/config/locales/fr.json
@@ -3,7 +3,7 @@
 	"A brand new app.": "Une toute nouvelle application.",
   "Hello, this is your notebooks": "Bonjour, voici vos carnets de notes",
   "You're looking at:": "Vous êtes ici:",
-  "Add new notebook": "Ajouter un nouveau carnet de notes",
+  "Add new notebook": "Nouveau carnet de notes",
   "Add new todo": "Ajouter une nouvelle note",
   "Login": "Connexion",
   "Logout": "Déconnexion"
