Commit before send final project

--- a/config/locales/fr.json
+++ b/config/locales/fr.json
@@ -6,5 +6,6 @@
   "Add new notebook": "Nouveau carnet de notes",
   "Add new todo": "Ajouter une nouvelle note",
   "Login": "Connexion",
-  "Logout": "Déconnexion"
+  "Logout": "Déconnexion",
+  "Signup": "Inscription"
 }
